--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Hero.loader.js";
+      var loaderUrl = buildUrl + "/Hero-Object-Creation-And-Deletion.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Hero.data.unityweb",
-        frameworkUrl: buildUrl + "/Hero.framework.js.unityweb",
-        codeUrl: buildUrl + "/Hero.wasm.unityweb",
+        dataUrl: buildUrl + "/Hero-Object-Creation-And-Deletion.data.unityweb",
+        frameworkUrl: buildUrl + "/Hero-Object-Creation-And-Deletion.framework.js.unityweb",
+        codeUrl: buildUrl + "/Hero-Object-Creation-And-Deletion.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Hero - Object Creation and Deletion and Time",
